# AutoML_Hauptseminar

./: .gitignore  README.md
Hauptseminar-ATM/Scheppat/: ATM.ipynb  college_complete.csv  college_complete_fixed.csv  college_test.csv  college_test_firstlinefilled.csv  college_test_quotes.csv  college_train_firstlinefilled.csv  college_train_quotes.csv  phishing_test_copy.csv  requirements.txt
Hauptseminar-AWS-SageMaker-Autopilot/LukasJansen/: Readme.md  SageMakerAutopilot.ipynb  college_test_headerfix_escapefix_nores.csv  college_test_headerfix_nores.csv  college_train_headerfix_escapefix.csv  phishing_test_headerfix_nores.csv
Hauptseminar-AlphaD3M/kraft/: README.md  requirements.txt
Hauptseminar-Auto-PyTorch/Reyer/: classification.py  phishing_train.csv  regression.py
Hauptseminar-Auto-PyTorch/reckeweg/: autopytorch_experiments.py  college_train.csv  results.txt  results_4_jobs.txt
Hauptseminar-AutoCVE/Nawrat/: README.txt  main.py
Hauptseminar-AutoKeras/: Hauptseminar_AutoKeras.py  college.csv  college_test.csv  college_train.csv  requirements.txt
Hauptseminar-AutoSklearn-2/: README.md  autosklearn.ipynb
Hauptseminar-MLBOX/: .gitignore  README.md  mlbox-code.py  preparation.py  pyproject.toml
Hauptseminar-MLBOX/wohnsland/: .gitignore  README.md  mlbox-code.py  preparation.py  requirements.txt
Hauptseminar-MLBOX/wohnsland/data/: college_test.csv  college_test_target.csv  college_train.csv  phishing_test.csv  phishing_test_target.csv  phishing_train.csv
Hautpseminar-MLBOX/: README.md
TransmogrifAI/: README.md  spark-defaults.conf
(+214 files in other folders)
