[tool.poetry]
name = "aw-mlbox"
version = "0.1.0"
description = "Example code for MLBOX AutoML"
authors = ["Andre <Andre_Wohnsland@web.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
